refactor: Prefer JDK over Guava
Co-authored-by: Moderne <team@moderne.io>